# prismatic

./: .gitignore  README.md  package.json  pnpm-lock.yaml  turbo.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.override.yml.unix  docker-compose.override.yml.windows  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  codeql.yml  release.yml
apps/desktop/: .prettierignore  eslint.config.js  package.json  prettier.config.js  vitest.config.ts
apps/desktop/src/: app.css  (+1 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: backup.rs  commands.rs  lib.rs  main.rs  platform.rs  watcher.rs
apps/desktop/src-tauri/src/engines/: mod.rs  types.rs  utils.rs
apps/desktop/src-tauri/src/engines/flash/: amf3.rs  mod.rs
apps/desktop/src-tauri/src/engines/pixel_game_maker_mv/: crypto.rs  mod.rs  names.rs
apps/desktop/src-tauri/src/engines/renpy/: mod.rs  pickle.rs
apps/desktop/src-tauri/src/engines/rpg_maker_mv/: mod.rs  names.rs
apps/desktop/src-tauri/src/engines/rpg_maker_vx_ace/: mod.rs  names.rs
apps/desktop/src-tauri/src/engines/sqlite/: mod.rs
apps/desktop/src-tauri/src/engines/sugarcube/: mod.rs
apps/desktop/src-tauri/src/engines/unity/: mod.rs
apps/desktop/src-tauri/src/engines/unreal_engine/: mod.rs
apps/desktop/src-tauri/src/engines/wolf_rpg_editor/: crypto.rs  mod.rs  reader.rs  vardb.rs
apps/desktop/src-tauri/wix/: license.rtf  main.wxs
crates/marshal-rs/: Cargo.toml
(+33 files in other folders)
