[package]
name = "prismatic"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "prismatic_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "7"
base64 = "0.22"
flate2 = "1"
twofish = "0.7"
cbc = "0.1"
chrono = "0.4"
thiserror = "2"
lz-str = "0.2"
zip = "2"
sha2 = "0.10"
hex = "0.4"
marshal-rs = "2.0.0"
uesave = "0.7"
rusqlite = { version = "0.31", features = ["bundled"] }
quick-xml = { version = "0.37", features = ["serialize"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
